--- a/mathwin.html
+++ b/mathwin.html
@@ -5,7 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.3">
     <title>MathWin</title>
     <style>
-        
+        body {
+    font-size: 1.1rem; /* slightly bigger than default */
+}
+
+@media (max-width: 600px) {
+  body {
+    font-size: 1.2rem; /* larger font for phones */
+    padding: 1rem;
+  }
+
+  h1, h2, h3 {
+    font-size: 1.5em;
+  }
+
+  .navbar a {
+    font-size: 1.1rem;
+    padding: 10px;
+  }
+}
+
         h1 {
             color: #333;
         }
