--- a/index.html
+++ b/index.html
@@ -133,6 +133,18 @@ body.dark {
     </p>
 
     <hr>
+<script>
+  const btn = document.getElementById('theme-toggle');
+  const body = document.body;
+
+  // Load saved preference
+  if (localStorage.theme === 'dark') body.classList.add('dark');
+
+  btn.addEventListener('click', () => {
+    body.classList.toggle('dark');
+    localStorage.theme = body.classList.contains('dark') ? 'dark' : 'light';
+  });
+</script>
 
 </body>
 </html>
