--- a/publications.html
+++ b/publications.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+    <button id="theme-toggle" aria-label="Toggle dark mode" 
+          style="position: fixed; top: 10px; right: 10px; padding: 8px 10px; border: none; border-radius: 6px; background: #ddd; cursor: pointer;">
+    🌓
+  </button>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
-    <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="style.css">
     <title>Research</title>
     <style>
         body {
     font-size: 1.1rem; /* slightly bigger than default */
 }
-<header>
-    <button id="theme-toggle" aria-label="Toggle dark mode">🌓</button>
-  </header>
+
+   
+ 
 @media (max-width: 600px) {
   body {
     font-size: 1.2rem; /* larger font for phones */
