--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Malek Hanounah</title>
     <link rel="icon" href="88x88.png" type="image/png">
    <link rel="stylesheet" href="style.css">
-   <button id="theme-toggle" aria-label="Toggle theme">🌓</button>
+   <button id="theme-toggle" aria-label="Toggle dark mode" 
+          style="position: fixed; top: 10px; right: 10px; padding: 8px 10px; border: none; border-radius: 6px; background: #ddd; cursor: pointer;">
+    🌓
+  </button>
 
     <style>
         body {
