--- a/publications.html
+++ b/publications.html
@@ -129,6 +129,19 @@ plane waves and beyond</em> (06/05/2025)
 
             
 <p><a href="index.html">Back to Home</a></p>
+
+        <script>
+  const btn = document.getElementById('theme-toggle');
+  const body = document.body;
+
+  // Load saved preference
+  if (localStorage.theme === 'dark') body.classList.add('dark');
+
+  btn.addEventListener('click', () => {
+    body.classList.toggle('dark');
+    localStorage.theme = body.classList.contains('dark') ? 'dark' : 'light';
+  });
+</script>
 </body>
 </html>
 
