--- a/mathwin.html
+++ b/mathwin.html
@@ -14,7 +14,14 @@
     font-size: 1.2rem; /* larger font for phones */
     padding: 1rem;
   }
-
+ body {
+            font-family: Times New Roman, sans-serif;
+           
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+            line-height: 1.6;
+        }
   h1, h2, h3 {
     font-size: 1.5em;
   }
