--- a/publications.html
+++ b/publications.html
@@ -64,20 +64,20 @@
         (with <a href="https://math-inf.uni-greifswald.de/institut/ueber-uns/mitarbeitende/kath/" target="_blank">I. Kath</a>, 
         <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">L. Mehidi</a> and 
         <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">A. Zeghib</a>), 
-        <a href="https://arxiv.org/abs/2309.14955" target="_blank">arXiv</a> (2023), 
+        <a href="https://arxiv.org/abs/2309.14955" target="_blank">arXiv</a> (2023), <hr>
         <em>Crelle's Journal</em> (2024), 
         <a href="https://drive.google.com/file/d/1ULRemUwffbqModM57exAuRwTP5NIW2sn/view?usp=sharing" target="_blank">pdf</a>.
     </li>
        <li>
         <strong>On homogeneous plane waves</strong> 
         (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">L. Mehidi</a> and 
-        <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">A. Zeghib</a>), <a href="https://arxiv.org/abs/2311.07459" target="_blank">arXiv</a> (2023),
+        <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">A. Zeghib</a>), <a href="https://arxiv.org/abs/2311.07459" target="_blank">arXiv</a> (2023), <hr>
            <em> J. Math. Phys </em> (2025), <a href="https://drive.google.com/file/d/19leaVY4XPrKGjtUGcDmXjCvBl4XxX3rD/view?usp=sharing" target="_blank">pdf</a>, <a href="https://pubs.aip.org/aip/jmp/article/66/5/052501/3345677/On-homogeneous-plane-waves?searchresult=1" target="_blank">link</a>.
     </li>
     <li>
         <strong>On completeness of foliated structures, and null Killing fields</strong> 
         (with <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">L. Mehidi</a>), 
-        <a href="https://arxiv.org/abs/2403.15722" target="_blank">arXiv</a> (2024), 
+        <a href="https://arxiv.org/abs/2403.15722" target="_blank">arXiv</a> (2024), <hr>
         <em>Mathematische Annalen
 </em> (2025), 
         <a href="https://drive.google.com/file/d/1xqwO59fQLwMjZWCayn8vMw4vj96HFqSS/view?usp=sharing" target="_blank">pdf</a>,
