--- a/publications.html
+++ b/publications.html
@@ -64,7 +64,7 @@
         (with <a href="https://math-inf.uni-greifswald.de/institut/ueber-uns/mitarbeitende/kath/" target="_blank">I. Kath</a>, 
         <a href="https://mehidi.pages.math.cnrs.fr/siteweb/" target="_blank">L. Mehidi</a> and 
         <a href="https://perso.ens-lyon.fr/zeghib/" target="_blank">A. Zeghib</a>), 
-        <a href="https://arxiv.org/abs/2309.14955" target="_blank">arXiv</a> (2023), <br>
+        <a href="https://arxiv.org/abs/2309.14955" target="_blank">arXiv</a> (2023),
         <em>Crelle's Journal</em> (2024), 
         <a href="https://drive.google.com/file/d/1ULRemUwffbqModM57exAuRwTP5NIW2sn/view?usp=sharing" target="_blank">pdf</a>.
     </li>
