--- a/teaching.html
+++ b/teaching.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+    <button id="theme-toggle" aria-label="Toggle dark mode" 
+          style="position: fixed; top: 10px; right: 10px; padding: 8px 10px; border: none; border-radius: 6px; background: #ddd; cursor: pointer;">
+    🌓
+  </button>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
