--- a/publications.html
+++ b/publications.html
@@ -100,6 +100,12 @@
 <hr>
     <h2>Talks</h2> 
     <ul>
+        <li>
+            <strong> Differential geometry research Seminar at Hamburg university
+            </strong> <em> On completeness compact locally symmetric spaces of signature $(2,2)$
+            
+            </em> (17/11/2025)
+        </li>
     <li> 
         <strong>BIRS-IMAG: Geometry, Analysis, and Physics in Lorentzian Signature, Granada:</strong> 
         <em>On geometry and topology of locally homogeneous
